--- a/web-dashboard/src/App.css
+++ b/web-dashboard/src/App.css
@@ -5,8 +5,10 @@
 
 
 
-.App-header {
+.App-body {
   /* background-image: url("./assets/mountain.jpg"); */
+  display: grid;
+  
   background-color: white;
   background-repeat: no-repeat;
   background-position: center;
