--- a/web-dashboard/src/App.css
+++ b/web-dashboard/src/App.css
@@ -8,15 +8,31 @@
 .App-body {
   /* background-image: url("./assets/mountain.jpg"); */
   display: grid;
-  
+  grid-template-columns: 1fr 1fr 2fr 2fr;
+  grid-template-rows: 1fr 2fr;
   background-color: white;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
 }
+
+.date-time{
+  grid-area: 1 / 4 / 2 / 5
+}
+
+.feed1 {
+  background: grey;
+  grid-area: 1 / 1 / 3 / 2;
+  margin: 10px;
+}
+
+.feed2 {
+  background: grey;
+  grid-area: 1 / 2 / 3 / 3;
+  margin: 10px;
+}
+
